hphp/hack/test/typecheck/nullsafe/nullsafe-unresolved.php.like_types.exp
File "nullsafe-unresolved.php", line 8, characters 18-19:
Invalid argument (Typing[4110])
File "nullsafe-unresolved.php", line 15, characters 25-40:
Expected ~Container<mixed> because it is an unenforceable type
File "nullsafe-unresolved.php", line 7, characters 8-13:
But got ?dynamic (use of ?-> operator)
